fix: Fix review date bad alignment on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ nav h1 {
 }
 
 .reviews-list li p {
-	padding: 0 3%;
+	padding: 0 5%;
 }
 
 .reviews-list .review-header {
@@ -384,14 +384,14 @@ nav h1 {
 }
 
 .reviews-list .review-header .review-date {
-	width: 30%;
+	width: 50%;
 	padding: 0 3%;
 	color: white;
+	text-align: right;
 }
 
 .reviewer-name {
-	width: 70%;
-	padding: 0 3%;
+	width: 50%;
 	line-height: normal;
 	color: white;
 }
